--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -32,7 +32,23 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+           <style>#results { color:black;  }
+
+        #load{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:9999;
+    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") no-repeat center center
+}
+
+
+        </style>
+
+
+
 </head>
+
 
 <body id="page-top" class="index">
 
@@ -87,6 +103,8 @@
 -->
 
 
+               <center><div id="load"></div></center>
+<div id="contents">
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
@@ -125,7 +143,7 @@
             </div>
         </div>
     </section>
-
+</div>
 
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
@@ -154,6 +172,21 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
+
+<script type="text/javascript">document.onreadystatechange = function () {
+  var state = document.readyState
+  if (state == 'interactive') {
+       document.getElementById('load').style.visibility="visible";
+       document.getElementById('contents').style.visibility="hidden";
+  } else if (state == 'complete') {
+      setTimeout(function(){
+         document.getElementById('interactive');
+         document.getElementById('load').style.visibility="hidden";
+         document.getElementById('contents').style.visibility="visible";
+      },1000);
+  }
+}</script>
+
 
 
 
