--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -34,7 +34,18 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
          <link rel="stylesheet" type="text/css" href="../static/DataTables/datatables.css">
-        <style>#results { color:black;  }</style>
+        <style>#results { color:black;  }
+
+        #load{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:9999;
+    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") no-repeat center center
+}
+
+
+        </style>
 
 
 
@@ -85,6 +96,10 @@
                   <!--           <hr class="star-primary"> -->
 					
 <h5>Your Items History</h5>
+
+                               <center><div id="load"></div></center>
+<div id="contents">
+
 
   <table id="history" cellspacing="0" width="100%" class="ui celled table">
 
@@ -185,7 +200,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!-- jQuery -->
     <script src="../static/js/jquery.js"></script>
 
@@ -212,6 +227,23 @@
                               
                         } );
                         </script>
+
+
+<script type="text/javascript">document.onreadystatechange = function () {
+  var state = document.readyState
+  if (state == 'interactive') {
+       document.getElementById('load').style.visibility="visible";
+       document.getElementById('contents').style.visibility="hidden";
+  } else if (state == 'complete') {
+      setTimeout(function(){
+         document.getElementById('interactive');
+         document.getElementById('load').style.visibility="hidden";
+         document.getElementById('contents').style.visibility="visible";
+      },1000);
+  }
+}</script>
+
+
 
 
 </body>
