--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
 <div id="contents">
 
 <form method="post" action="http://dinero-web.heroku.com/search">
-<p><input type="text" name="add" value="add" placeholder="Item Name"></p>
+<p><input type="text" name="add" placeholder="Item Name"></p>
       
 
 
