--- a/templates/index.html
+++ b/templates/index.html
@@ -140,20 +140,16 @@
       
 
 
-<!-- icons buttons: -->
-<div id="icons">
-
+<!-- icons buttons:
+    <div id="icons">
 <p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
     <p><input class="floating-box img-thumbnail" type="image" src="../static/img/alii.png"  alt="checkbox" width="48" height="48"></p>
     <p><input class="floating-box img-thumbnail" type="image" src="../static/img/dealextreame.png"  alt="checkbox" width="48" height="48"></p>
     <p><input class="floating-box img-thumbnail" type="image" src="../static/img/amazon.jpg"  alt="checkbox" width="48" height="48"></p>
 </div>
+ -->
 
-    <!-- Webs field:
-<p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
-        </p>
--->
-<div></div>
+
 <p class="submit"><input type="submit" value="Search Now" class="btn btn-success after-box"></p>
 
 </form>
