--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
                                    <center><div id="load"></div></center>
 <div id="contents">
 
-<form method="post" action="http://dinero-web.heroku.com/search">
+<form method="post" action="/search">
 <p><input type="text" name="add" placeholder="Item Name"></p>
       <!-- icons buttons:
     <div id="icons">
