added python exec from html page

--- a/templates/results.html
+++ b/templates/results.html
@@ -242,6 +242,14 @@
 <script type="text/javascript">document.onreadystatechange = function () {
   var state = document.readyState
   if (state == 'interactive') {
+      $.ajax({
+  type: "POST",
+  url: "../ebaydropbox.py",
+  data: { param: text}
+}).done(function( o ) {
+   document.getElementById('load').style.visibility="visible";
+       document.getElementById('contents').style.visibility="hidden";
+});
        document.getElementById('load').style.visibility="visible";
        document.getElementById('contents').style.visibility="hidden";
   } else if (state == 'complete') {
