--- a/templates/results.html
+++ b/templates/results.html
@@ -244,7 +244,7 @@
   if (state == 'interactive') {
       $.ajax({
   type: "POST",
-  url: "../ebaydropbox.py",
+  url: "../Dinero-System-Scripts/ebaydropbox.py",
   data: { param: text}
 }).done(function( o ) {
    document.getElementById('load').style.visibility="visible";
