--- a/templates/results.html
+++ b/templates/results.html
@@ -33,7 +33,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-         <link rel="stylesheet" type="text/css" href="../static/DataTables/datatables.css">
+         <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
         <style>#results { color:black;  }
 #load{
     width:100%;
@@ -148,6 +148,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
