--- a/templates/results.html
+++ b/templates/results.html
@@ -112,7 +112,7 @@
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
                 <td><img src={{x[4]}} height="50" width="50" ></td>
-                <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary" id={{x[0]}} ></p></td>
+                <td><form method="post"><p class="submit" <a href={{ x[3] }}></a>><input type="submit" value="Buy" class="btn btn-primary" id={{x[0]}} ></p></td>
                 <td><form method="post" action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><p class="submit"><input type="submit" value="Like" class="btn btn-success" id={{x[0]}} ></p></td>
 
 
