--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -118,18 +118,20 @@
 
  <form method="post" action="http://dinero-web.heroku.com/dinero" style="display: inline;" >
          <p><input type="text" name="add" value="" placeholder="Email"></p>
-        </p>
+
 <p><input type="password" name="add2" value="" placeholder="Password"></p>
-        </p>
-     <p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-lg"></p>
+
+     <p class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
+ <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
+  <span class="fa fa-facebook" style="padding-right:15px;"></span>
+        Sign In With Facebook
+
+
+</a>
+      </p>
 
      </form>
 
-                    <span style="padding-top:30px;width: 30px; height: 65px;">
-                    <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
-  <span class="fa fa-facebook" style="padding-right:15px;"></span>
-        Sign In With Facebook
-</a>
 
 
                 </div>
