--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
  -->
 
 
-<p class="submit"><input type="submit" value="Search Now" class="btn btn-success after-box"></p>
+<p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" value="Search Now" class="btn btn-success btn-block after-box"></p>
 
 </form>
 
