--- a/templates/login.html
+++ b/templates/login.html
@@ -190,7 +190,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							
 						});
 					</script>
-				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
+                        <a onclick="goBack()" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 
 
 					</div>
