--- a/templates/index.html
+++ b/templates/index.html
@@ -159,14 +159,17 @@
            
     </section>
 
-
-
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
 
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
         </a>
     </div>
 </div>
