--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -257,6 +257,20 @@
   }
 }</script>
 
+    <!-- To The Back Page -->
+
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
+    <div class="scroll-top page-scroll visible-xs visible-sm">
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+    </div>
+</div>
 
 
 
