--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -148,15 +148,21 @@
     </section>
 </div>
 
+    <!-- To The Back Page -->
 
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
+
     <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
         </a>
     </div>
-
-
+</div>
 
     <!-- jQuery -->
     <script src="../static/js/jquery.js"></script>
