--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -245,6 +245,21 @@
 }</script>
 
 
+    <!-- To The Back Page -->
+
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
+
+    <div class="scroll-top page-scroll visible-xs visible-sm">
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+    </div>
+</div>
 
 
 </body>
