--- a/templates/results.html
+++ b/templates/results.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 
     <title>Dinero</title>
@@ -106,7 +107,18 @@
 
   <table id="results" cellspacing="0" width="100%" class="ui celled table">
        <tbody>
+
+       <tr>
+            <td>Minimum Price:</td>
+            <td><input type="text" id="min" name="min"></td>
+        </tr>
+        <tr>
+            <td>Maximum Price:</td>
+            <td><input type="text" id="max" name="max"></td>
+        </tr>
+
         {% for x in list %}
+
             <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
@@ -114,7 +126,7 @@
                 <td><img src={{x[4]}} height="50" width="50" ></td>
                 <td><form action={{x[3]}}><input type="submit" value="Buy" class="btn btn-primary"></form></td>
                 <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success"></form></td>
-                </tr>
+            </tr>
         {% endfor %}
        </tbody>
     </table>
@@ -225,17 +237,44 @@
 	
 
 	 <script type="../static/text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+<script type="../static/text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"
+        <script type="../static/text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.12.3.min.js"
+
+
+
+
                         <script>
-                        $(document).ready(function() {
-                                $('#results').DataTable({
-                                    responsive=true
-                                                        });
+$.fn.dataTable.ext.search.push(
+    function( settings, data, dataIndex ) {
+        var min = parseInt( $('#min').val(), 10 );
+        var max = parseInt( $('#max').val(), 10 );
+        var age = parseFloat( data[3] ) || 0; // use data for the age column
 
+        if ( ( isNaN( min ) && isNaN( max ) ) ||
+             ( isNaN( min ) && age <= max ) ||
+             ( min <= age   && isNaN( max ) ) ||
+             ( min <= age   && age <= max ) )
+        {
+            return true;
+        }
+        return false;
+    }
+);
 
+$(document).ready(function() {
+    var table = $('#results').DataTable();
 
-                              
-                        } );
+    // Event listener to the two range filtering inputs to redraw on input
+    $('#min, #max').keyup( function() {
+        table.draw();
+    } );
+} );
                         </script>
+
+
+
+
+
 
 <script type="text/javascript">document.onreadystatechange = function () {
   var state = document.readyState
