--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -237,7 +237,20 @@
         }
     ]
 } );
-                                $("#favorites").DataTable();
+                                $("#favorites").DataTable(
+
+                                        {
+            "columns": [
+                null,
+                null,
+                { "orderDataType": "dom-text" },
+                { "orderDataType": "dom-text", "type": "numeric" },
+                { "orderDataType": "dom-select" },
+                { "orderDataType": "dom-checkbox" }
+            ]
+        }
+
+                                );
                               
                         } );
                         </script>
@@ -272,7 +285,8 @@ function goBack() {
     </div>
 </div>
 
-
+<script type="text/javascript" src="jquery.dataTables.js"></script>
+<script type="text/javascript" src="dataTables.dataSourcePlugins.js"></script>
 
 </body>
 
