--- a/templates/results.html
+++ b/templates/results.html
@@ -112,6 +112,12 @@
 
 
       <tbody>
+      <td><form action="http://dinero-web.heroku.com/results/filtering">
+  <input type="image" src="../static/img/ebay.png" alt="Submit" id="ebay">
+          <input type="image" src="../static/img/alii.png" alt="Submit" id="ali">
+          <input type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
+          <input type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
+</form></td>
       {% for x in list %}
 
             <tr>
