--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -147,7 +146,7 @@
  -->
 
 
-<p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" value="Search Now" class="btn btn-success btn-block after-box"></p>
+<p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" id="search" autocomplete="off" data-loading-text="Loading..." value="Search Now" class="btn btn-success btn-block after-box"></p>
 
 </form>
 
@@ -215,6 +214,15 @@ function goBack() {
       },1000);
   }
 }</script>
+
+
+    <script>
+  $('#search').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
 
 
 
