--- a/templates/index.html
+++ b/templates/index.html
@@ -145,8 +145,10 @@
 </div>
  -->
 
-
+<!--
 <p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" id="search" autocomplete="off" data-loading-text="Loading..." value="Search Now" class="btn btn-success btn-block after-box"></p>
+-->
+   <button style="width: 200px; height: 65px; display: inline-block;" type="submit" id="search" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search</button>
 
 </form>
 
