--- a/templates/results.html
+++ b/templates/results.html
@@ -233,7 +233,7 @@
 
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<!-- <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> --> 
     <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
