--- a/templates/results.html
+++ b/templates/results.html
@@ -126,7 +126,7 @@
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
-                <td><img src={{x[4]}} height="50" width="50" onclick="window.open(this.src)"></td>
+                <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td>
                 <!--
                 <td>  <div id="pageone" data-role="main" class="ui-content">
     <a href="#myPopup" data-rel="popup" data-position-to="window">
@@ -320,12 +320,7 @@ $(document).ready(function(){
 });
 </script>
 
-
-<script>
- function imgWindow() {
-  window.open("image") }
-</script>
-
+    
 
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
