--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7073,3 +7073,25 @@ div#content {
     z-index:9999;
     background:url("https://www.google.co.il/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw&url=http%3A%2F%2Fwww.downgraf.com%2Finspiration%2F25-beautiful-loading-bar-design-examples-gif-animated%2F&psig=AFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ&ust=1461917813793622") no-repeat center center rgba(0,0,0,0.25)
 }
+
+
+#thumbwrap {
+	position:relative;
+	margin:75px auto;
+	width:252px; height:252px;
+}
+.thumb img {
+	border:1px solid #000;
+	margin:3px;
+	float:left;
+}
+.thumb span {
+	position:absolute;
+	visibility:hidden;
+}
+.thumb:hover, .thumb:hover span {
+	visibility:visible;
+	top:0; left:250px;
+	z-index:1;
+}
+
