--- a/templates/results.html
+++ b/templates/results.html
@@ -126,7 +126,9 @@
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
-                <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td>
+         <!--        <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td> -->
+                <td><div id="thumbwrap">
+<a class="thumb" href="#"><img src={{x[4]}} alt=""><span><img src="{{x[4]}}" alt=""></span></a></div></td>
                 <!--
                 <td>  <div id="pageone" data-role="main" class="ui-content">
     <a href="#myPopup" data-rel="popup" data-position-to="window">
@@ -320,7 +322,7 @@ $(document).ready(function(){
 });
 </script>
 
-    
+
 
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
