--- a/templates/results.html
+++ b/templates/results.html
@@ -114,10 +114,10 @@
       <tbody>
       <td>
           <center><form action="http://dinero-web.heroku.com/results/filtering">
-  <input type="image" src="../static/img/ebay.png" alt="Submit" id="ebay">
-          <input type="image" src="../static/img/alii.png" alt="Submit" id="ali">
-          <input type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
-          <input type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
+  <input class="img-thumbnail" type="image" src="../static/img/ebay.png" alt="Submit" id="ebay">
+          <input class="img-thumbnail" type="image" src="../static/img/alii.png" alt="Submit" id="ali">
+          <input class="img-thumbnail" type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
+          <input class="img-thumbnail" type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
 </form>
       </center></td>
       {% for x in list %}
@@ -126,8 +126,9 @@
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
-         <       <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td> 
-                
+         <!--        <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td> -->
+                <td><div id="thumbwrap">
+<a class="thumb" href="#"><img src={{x[4]}} alt=""><span><img src="{{x[4]}}" alt=""></span></a></div></td>
                 <!--
                 <td>  <div id="pageone" data-role="main" class="ui-content">
     <a href="#myPopup" data-rel="popup" data-position-to="window">
@@ -138,8 +139,8 @@
     </div>
   </div></td>
   -->
-                <td><form action={{x[3]}}><input type="submit" value="Buy" class="btn btn-primary"></form></td>
-                <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success"></form></td>
+                <td><form action={{x[3]}}><input type="submit" value="Buy" class="btn btn-primary btn-lg btn-block"></form></td>
+                <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success btn-lg btn-block"></form></td>
             </tr>
         {% endfor %}
        </tbody>
