--- a/templates/results.html
+++ b/templates/results.html
@@ -139,8 +139,8 @@
     </div>
   </div></td>
   -->
-                <td><form action={{x[3]}}><input type="submit" value="Buy" class="btn btn-primary btn-lg btn-block"></form></td>
-                <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success btn-lg btn-block"></form></td>
+                <td><form action={{x[3]}}><input type="submit" value="Buy" class="btn btn-primary btn-block"></form></td>
+                <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success btn-block"></form></td>
             </tr>
         {% endfor %}
        </tbody>
