--- a/templates/index.html
+++ b/templates/index.html
@@ -129,13 +129,13 @@
                     <h2>Dinero Search</h2>
                   <!--           <hr class="star-primary"> -->
 					
-<h5>Easy To Shop !</h5>
+<h4>Easy To Shop !</h4>
 
                                    <center><div id="load"></div></center>
 <div id="contents">
 
 <form method="post" action="/search">
-<p><input type="text" name="add" placeholder="Item Name"></p>
+<p style="padding: 20px"><input type="text" name="add" placeholder="Item Name"></p>
       <!-- icons buttons:
     <div id="icons">
 <p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
@@ -148,7 +148,8 @@
 <!--
 <p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" id="search" autocomplete="off" data-loading-text="Loading..." value="Search Now" class="btn btn-success btn-block after-box"></p>
 -->
-   <button style="width: 200px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button>
+    <p style="padding-top: 60px"></p>
+   <button style="width: 300px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button>
 
 </form>
 
