--- a/templates/results.html
+++ b/templates/results.html
@@ -118,6 +118,7 @@
           <input class="img-thumbnail" type="image" src="../static/img/alii.png" alt="Submit" id="ali">
           <input class="img-thumbnail" type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
           <input class="img-thumbnail" type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
+              <input height="58px" width="58px" class="img-thumbnail" type="image" src="../static/img/low_cost.png" alt="Submit" id="low">
 </form>
       </center></td>
       {% for x in list %}
@@ -127,7 +128,7 @@
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
          <td><div class="thumb" id="thumbwrap"><img src={{x[4]}} height="50" width="50"></div></td>
-               
+
                 <!--
                 <td>  <div id="pageone" data-role="main" class="ui-content">
     <a href="#myPopup" data-rel="popup" data-position-to="window">
