--- a/templates/results.html
+++ b/templates/results.html
@@ -118,7 +118,7 @@
           <input class="img-thumbnail" type="image" src="../static/img/alii.png" alt="Submit" id="ali">
           <input class="img-thumbnail" type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
           <input class="img-thumbnail" type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
-              <input height="58px" width="58px" class="img-thumbnail" type="image" src="../static/img/low_cost.png" alt="Submit" id="low">
+              <input style="height: 58px; width: 58px;" class="img-thumbnail" type="image" src="../static/img/low_cost.png" alt="Submit" id="low">
 </form>
       </center></td>
       {% for x in list %}
