--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -118,11 +118,11 @@
 <h5>Easy To Shop !</h5>
 
  <form method="post" action="http://dinero-web.heroku.com/dinero" style="display: inline;" >
-         <p><input type="text" name="add" value="" placeholder="Email"></p>
+         <p style="padding-top: 20px" ><input class="form-control" type="text" name="add" value="" placeholder="Email"></p>
 
-<p><input type="password" name="add2" value="" placeholder="Password"></p>
+<p><input class="form-control" type="password" name="add2" value="" placeholder="Password"></p>
 
-     <p class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
+     <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
   <span class="fa fa-facebook" style="padding-right:15px;"></span>
         Sign In With Facebook
