--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
 -->
     <p style="padding-top: 10px"></p>
   <!-- <button style="width: 300px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button> -->
-<button style="width: 300px; height: 65px; display: inline-block;" type="button" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
+<button style="width: 300px; height: 65px; display: inline-block;" type="submit" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
 </form>
 
 
