--- a/templates/results.html
+++ b/templates/results.html
@@ -130,7 +130,7 @@
             
 
 
-                <td><form action={{x[3]}}><input type="submit" value="Buy" target="_blank" class="btn btn-primary btn-block"></form></td>
+                <td><form action={{x[3]}} target="_blank"><input type="submit" value="Buy" target="_blank" class="btn btn-primary btn-block"></form></td>
                 <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success btn-block"></form></td>
             </tr>
         {% endfor %}
