--- a/templates/results.html
+++ b/templates/results.html
@@ -137,6 +137,14 @@
 }
 </style>
 
+<style>  
+img {
+    transition: -webkit-transform 0.25s ease;
+}
+img:active {
+    -webkit-transform: scale(2);
+}
+</style>
 
 </head>
 
@@ -215,7 +223,8 @@
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
-    <td><div class="img-thumbnail"><img src={{x[4]}} id="myImg" height="120" width="120"></div></td> 
+  <!--  <td><div class="img-thumbnail"><img src={{x[4]}} id="myImg" height="120" width="120"></div></td> -->
+		<td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
     
     <div id="myModal" class="modal">
   <span class="close">×</span>
