--- a/templates/results.html
+++ b/templates/results.html
@@ -137,9 +137,10 @@
 }
 </style>
 
+<!-- zoom when click -->
 <style>  
 img {
-    transition: -webkit-transform 0.25s ease;
+    transition: -webkit-transform 10s ease;
 }
 img:active {
     -webkit-transform: scale(2);
