--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -108,7 +108,7 @@
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
-                 <td><img src={{x[4]}} height="50" width="50" ></td>
+                 <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary" id={{x[0]}}></p></td>
                 <td><form method="post" action="http://dinero-web.heroku.com/favorites/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger" id={{x[0]}} ></p></td>
              
