--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,9 @@
                     <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
+                                        <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
+                    </li>
                   
                 </ul>
             </div>
