--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -80,6 +80,9 @@
                     <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
+                                        <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
